--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # things you probably want to change
-url: https://crouton.net
-title: Point Theme
+url: https://connorrothschild.github.io/testing
+title: New Site
 description: description for search engines and social media cards
 nav-links:
   - name: Home
