--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # things you probably want to change
-url: https://connorrothschild.github.io/testing
+url: https://connorrothschild.github.io/
 title: Connor Rothschild
 description: Connor Rothschild is an undergraduate at Rice University interested in data science, visualization, and public policy.
 nav-links:
