--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,11 @@ nav-links:
   - name: Home
     url: /
   - name: Visualizations
-    url: /visualizations
+    url: visualizations
   - name: Blog
-    url: /blog
+    url: blog
   - name: Resume
-    url: /resume
-
-include:
-  - _pages
+    url: resume
   
 # things you probably don't want to change
 defaults:
@@ -22,12 +19,6 @@ defaults:
       path: ""
     values:
       layout: "default"
-  - # _pages
-  scope:
-      path: "_pages"
-      type: pages
-    values:
-      layout: "pages"
   - # sets is_post=true for all blog posts
     scope:
       path: ""
