--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ defaults:
       type: posts
     values:
       is_post: true
+  -
+    scope:
+      path: "r"
+      type: posts
 permalink: /:title # so we have /about instead of /about.html, and /blog-post instead of /2019-11-22-blog-post.html
 sass:
   style: compressed # compress the CSS file generated from the SCSS styles file
