add v1/ to all permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,6 @@ defaults:
     scope:
       path: "r"
       type: posts
-permalink: /:title # so we have /about instead of /about.html, and /blog-post instead of /2019-11-22-blog-post.html
+permalink: /v1/:title # so we have /about instead of /about.html, and /blog-post instead of /2019-11-22-blog-post.html
 sass:
   style: compressed # compress the CSS file generated from the SCSS styles file
