--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: v1.connorrothschild.com/
+url: https://connorrothschild.github.io/v1
 title: Connor Rothschild
 description: Connor Rothschild is an undergraduate at Rice University interested in data science, visualization, and public policy.
 nav-links:
